syntax = "proto3";
package accountpb;

message KeyPair{
    bytes privateKey = 1;
    bytes publicKey = 2;
}